--- a/src/main/resources/templates/cerveja/cadastro-produto.html
+++ b/src/main/resources/templates/cerveja/cadastro-produto.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt" xmlns="http://www.w3.org/1999/xhtml" 
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
 	<meta charset="UTF-8"/>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -7,9 +9,9 @@
 
 	<title>AlgaWorks</title>
 
-	<link rel="stylesheet" type="text/css" href="/brewer/layout/stylesheets/vendors.min.css"/>
-	<link rel="stylesheet" type="text/css" href="/brewer/layout/stylesheets/algaworks.min.css"/>
-	<link rel="stylesheet" type="text/css" href="/brewer/layout/stylesheets/application.css"/>
+	<link rel="stylesheet" type="text/css" th:href="@{/layout/stylesheets/vendors.min.css}"/>
+	<link rel="stylesheet" type="text/css" th:href="@{/layout/stylesheets/algaworks.min.css}"/>
+	<link rel="stylesheet" type="text/css" th:href="@{/layout/stylesheets/application.css}"/>
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -33,7 +35,7 @@
 
 	    <div class="navbar-header">
 	      <a class="navbar-brand  hidden-xs" href="#">
-	        <img alt="AlgaWorks" src="/brewer/layout/images/logo.png"/>
+	        <img alt="AlgaWorks" th:src="@{/layout/images/logo.png}"/>
 	      </a>
 
 	      <ul class="nav  navbar-nav">
@@ -230,8 +232,8 @@ function excluir() {
 	</div>
 </div>
 
-<script src="/brewer/layout/javascripts/vendors.min.js"></script>
-<script src="/brewer/layout/javascripts/algaworks.min.js"></script>
+<script th:src="@{/layout/javascripts/vendors.min.js}"></script>
+<script src="@{/layout/javascripts/algaworks.min.js}"></script>
 
 </body>
 </html>
