adicionando layouts via fragments

--- a/src/main/resources/templates/layout/LayoutPadrao.html
+++ b/src/main/resources/templates/layout/LayoutPadrao.html
@@ -30,7 +30,7 @@
 	<div th:replace="layout/fragments/MenuLateral :: sidebar"  ></div>
 	
 	
-	<div th:replace="/cerveja/CadastroCerveja  :: conteudo"  ></div>
+	<section class="aw-layout-content  js-content" layout:fragment="conteudo"></section>
 	
 	
 	<div th:replace="/layout/fragments/footer :: navfooter"> </div>
