melhorando forms e corrigindo UTF-8

--- a/src/main/resources/templates/usuario/CadastroUsuario.html
+++ b/src/main/resources/templates/usuario/CadastroUsuario.html
@@ -1,27 +1,23 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="UTF-8">
+<html lang="pt" xmlns="http://www.w3.org/1999/xhtml" 
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	layout:decorator="'layout/LayoutPadrao'">
 <title>Cadastro de Usuário</title>
-	<link rel="stylesheet" type="text/css" th:href="@{/layout/stylesheets/vendors.min.css}"/>	
-	<link rel="stylesheet" type="text/css" th:href="@{/layout/stylesheets/algaworks.min.css}"/>
-	<link rel="stylesheet" type="text/css" th:href="@{/layout/stylesheets/application.css}"/>
-	<link rel="stylesheet" type="text/css" th:href="@{/stylesheets/brewer.css}"/>
+
 </head>
 <body>
-	<div class="aw-layout-page">
-		<div th:replace="layout/fragments/BarraNavegacao :: navbar"></div>
-		<div th:replace="layout/fragments/MenuLateral :: sidebar"></div>		
+	
 		
-		<section class="aw-layout-content  js-content">
+		<section layout:fragment="conteudo">
+		
 			<div class="page-header">
 				<div class="container-fluid">
-					<h1>Cadastro de Cliente</h1>
+					<h1>Cadastro de Usuário</h1>
 				</div>
 			</div>
 			
 			<div class="container-fluid">
-
 			
 				<form method="POST" th:object="${cerveja}"
 					class="form-vertical  js-form-loading">
@@ -80,15 +76,8 @@
 										<label>Vendedor</label>
 									</div>									
 								</div>	
-							</div>			
-						
-						
-										
+							</div>										
 					</div>
-					
-
-			
-
 
 					<div class="form-group">
 						<button class="btn  btn-primary" type="submit">Salvar</button>
@@ -99,6 +88,6 @@
 		</section>
 		
 		<div th:replace="" ></div>
-	</div>
+	
 </body>
 </html>
