--- a/src/main/resources/templates/cliente/CadastroCliente.html
+++ b/src/main/resources/templates/cliente/CadastroCliente.html
@@ -1,35 +1,15 @@
 <!DOCTYPE html>
-<html lang="pt" xmlns="http://www.w3.org/1999/xhtml"
+<html  xmlns="http://www.w3.org/1999/xhtml" 
 	xmlns:th="http://www.thymeleaf.org"
-	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	layout:decorator="'layout/LayoutPadrao'">
 <head>
-<meta charset="UTF-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 <title>Cadastro de Cliente</title>
 
-<link rel="stylesheet" type="text/css"	th:href="@{/layout/stylesheets/vendors.min.css}" />
-<link rel="stylesheet" type="text/css"	th:href="@{/layout/stylesheets/algaworks.min.css}" />
-<link rel="stylesheet" type="text/css"	th:href="@{/layout/stylesheets/application.css}" />
-
-<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-<!--[if lt IE 9]>
-		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	<![endif]-->
 </head>
 <body>
-	<div class="aw-layout-page">
-
-		<div th:replace="layout/fragments/BarraNavegacao :: navbar"></div>
-
-
-		<div th:replace="layout/fragments/MenuLateral :: sidebar"></div>
-
-
-		<section class="aw-layout-content  js-content">
+		<section layout:fragment="conteudo">
 
 			<div class="page-header">
 				<div class="container-fluid">
@@ -38,7 +18,6 @@
 			</div>
 
 			<div class="container-fluid">
-
 			
 				<form method="POST" th:object="${cerveja}"
 					class="form-vertical  js-form-loading">
@@ -135,20 +114,12 @@
 
 					</div>
 
-
 					<div class="form-group">
 						<button class="btn  btn-primary" type="submit">Salvar</button>
 					</div>
 
 				</form>
-			</div>
-			
+			</div>			
 		</section>
-
-
-		<div th:replace="/layout/fragments/footer :: navfooter"></div>
-
-	</div>
-
 </body>
 </html>
