--- a/src/main/resources/templates/usuario/CadastroUsuario.html
+++ b/src/main/resources/templates/usuario/CadastroUsuario.html
@@ -1,93 +1,91 @@
 <!DOCTYPE html>
-<html lang="pt" xmlns="http://www.w3.org/1999/xhtml" 
-	xmlns:th="http://www.thymeleaf.org"
+<html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	xmlns:th="http://www.thymeleaf.org"
 	layout:decorator="'layout/LayoutPadrao'">
-<title>Cadastro de Usuário</title>
-
+<head>
+	<title>Cadastro de Usuário</title>
+	<link rel="stylesheet" type="text/css"	th:href="@{/stylesheets/vendors/bootstrap-switch.min.css}" />
 </head>
-<body>
-	
-		
-		<section layout:fragment="conteudo">
-		
-			<div class="page-header">
-				<div class="container-fluid">
-					<h1>Cadastro de Usuário</h1>
+
+
+<section layout:fragment="conteudo">
+
+	<div class="page-header">
+		<div class="container-fluid">
+			<h1>Cadastro de usuário</h1>
+		</div>
+	</div>
+
+	<div class="container-fluid">
+		<form>
+			<div class="row">
+				<div class="form-group  col-sm-12">
+					<label for="nome">Nome</label> <input type="text"
+						class="form-control" id="nome" autofocus="autofocus" />
 				</div>
 			</div>
-			
-			<div class="container-fluid">
-			
-				<form method="POST" th:object="${cerveja}"
-					class="form-vertical  js-form-loading">
 
-					<div class="row">
-						<div class="col-lg-9 col-sm-9 form-group">
-							<label for="nome">Nome</label> 
-							<input id="nome" type="text" class="form-control" />
-						</div>
-					</div>
-
-					<div class="row">
-						<div class="col-lg-3 col-sm-3  form-group">
-							<label for="email">Email</label>
-							<input id="email" type="text" class="form-control">
-						</div>
-
-						<div class="col-lg-6 col-sm-6  form-group">
-							<label for="datanascimento">Data de Nascimento:</label>
-							<input id="datanascimento" type="text" class="form-control" />
-						</div>
-
-					</div>
-
-					<div class="row">
-						<div class="col-sm-3 form-group">
-							<label for="senha">Senha</label>
-							<input id="senha" type="text" class="form-control">						
-						</div>					
-						
-						<div class="col-sm-3 form-group">
-							<label for="confirmasenha">Confirmação Senha</label>
-							<input id="confirmasenha" type="text" class="form-control">						
-						</div>	
-						<div class="col-sm-3 form-group">
-							<label for="status" class="control-label">Status</label>
-							
-								<div class="checkbox ">
-								<input type="checkbox">		
-								<label>Ativo</label>	
-								</div>
-																
-						</div>					
-					</div>
-					
-						<div class="row">
-							<div class="col-sm-6 form-group">
-								<label for="grupos" class="control-label">Grupos</label>
-								<div>
-									<div class="checkbox checkbox-inline">
-										<input type="checkbox">
-										<label>Administrador</label>
-									</div>
-									<div class="checkbox checkbox-inline">
-										<input type="checkbox">
-										<label>Vendedor</label>
-									</div>									
-								</div>	
-							</div>										
-					</div>
-
-					<div class="form-group">
-						<button class="btn  btn-primary" type="submit">Salvar</button>
-					</div>
-
-				</form>
+			<div class="row">
+				<div class="form-group  col-sm-6">
+					<label for="email">E-mail</label> <input type="text"
+						class="form-control" id="email" />
+				</div>
+				<div class="form-group  col-sm-3">
+					<label for="dataNascimento">Data de nascimento</label> <input
+						type="text" class="form-control" id="dataNascimento" />
+				</div>
 			</div>
-		</section>
-		
-		<div th:replace="" ></div>
-	
-</body>
+
+			<div class="row">
+				<div class="form-group  col-sm-3">
+					<label for="senha">Senha</label> <input type="password"
+						class="form-control" id="senha" />
+				</div>
+
+				<div class="form-group  col-sm-3">
+					<label for="confirmacaoSenha">Confirmação de senha</label> <input
+						type="password" class="form-control" id="confirmacaoSenha" />
+				</div>
+
+				<div class="form-group  col-sm-3">
+					<label class="control-label">Status</label>
+					<div>
+						<input type="checkbox" class="js-status" data-size="small"
+							data-off-color="danger" data-on-text="Ativo"
+							data-off-text="Inativo" />
+					</div>
+				</div>
+
+			</div>
+
+			<div class="row">
+				<div class="form-group  col-sm-6">
+					<label class="control-label">Grupos</label>
+					<div>
+						<div class="checkbox  checkbox-inline">
+							<input type="checkbox" /> <label>Administrador</label>
+						</div>
+						<div class="checkbox  checkbox-inline">
+							<input type="checkbox" /> <label>Vendedor</label>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<button type="submit" class="btn  btn-primary">Salvar</button>
+		</form>
+	</div>
+</section>
+
+
+
+
+<th:block layout:fragment="javascript-extra">
+	<script th:src="@{/javascripts/vendors/bootstrap-switch.min.js}"></script>
+	<script>
+		$('.js-status').bootstrapSwitch();
+	</script>
+</th:block>
+
 </html>
