concluindo tela de estilo, cidade. add favicon

--- a/src/main/resources/templates/layout/LayoutPadrao.html
+++ b/src/main/resources/templates/layout/LayoutPadrao.html
@@ -14,6 +14,8 @@
 <link rel="stylesheet" type="text/css"	th:href="@{/layout/stylesheets/application.css}" />
 <link rel="stylesheet" type="text/css"	th:href="@{/stylesheets/brewer.css}" />
 
+<link rel="shortcut icon" th:href="@{/layout/images/favicon.png}">
+
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
@@ -38,7 +40,6 @@
 		<div th:replace="/layout/fragments/Footer :: navfooter"></div>
 
 	</div>
-
 
 	<script th:src="@{/layout/javascripts/vendors.min.js}"></script>
 	<script th:src="@{/layout/javascripts/algaworks.min.js}"></script>
